--- a/Lab2/microsoft-homepage/index.html
+++ b/Lab2/microsoft-homepage/index.html
@@ -83,6 +83,30 @@
             </p>
             <button class="shop-now">Shop now</button>
         </div>
+
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="" alt="" />
+                <a href="http://example.com">Shop Surface devices</a>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="" />
+                <a href="http://example.com">Shop Surface devices</a>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="" />
+                <a href="http://example.com">Shop Surface devices</a>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="" />
+                <a href="http://example.com">Shop Surface devices</a>
+            </div>
+            <div class="grid-item">
+                <img src="" alt="" />
+                <a href="http://example.com">Shop Surface devices</a>
+            </div>
+        </div>
+
         <div class="grid-container">
             <div class="grid-item">
                 <h2>Surface Laptop, Copilot+ PC</h2>
